hphp/test/slow/sanity/1.php.expectf
Fatal error: A .php file must begin with '<?hh'. in %s/test/slow/sanity/1.php on line 1